--- a/source/sass/common/common.scss
+++ b/source/sass/common/common.scss
@@ -1,6 +1,6 @@
 body {
   background-color: $main-color;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   min-width: 320px;
 }
 
