--- a/source/sass/blocks/site-choice.scss
+++ b/source/sass/blocks/site-choice.scss
@@ -1,8 +1,8 @@
-.site-choice {
+/*.site-choice {
   list-style-type: none;
   padding: 0;
   margin: 0;
-  margin-top: -5px;
+  //margin-top: -5px;
   background-color: #fafafa;
   display: flex;
   flex-direction: column;
@@ -25,34 +25,114 @@
   }
 }
 
+.site-choice__text {
+  display: inline-block;
+  width: 120px;
+}
+
 .site-choice__interior {
   background-color: #63d1bb;
-  background-image: url("../img/icon-interior.svg");
-  background-repeat: no-repeat;
-  background-position: 257px 29px;
+  //background-image: url("../img/icon-interior.svg");
+  //background-repeat: no-repeat;
+  //background-position: 257px 29px;
 }
 
 .site-choice__toys {
   background-color: #56c3b2;
-  background-image: url("../img/icon-toy.svg");
-  background-repeat: no-repeat;
-  background-position: 240px 29px;
+  //background-image: url("../img/icon-toy.svg");
+  //background-repeat: no-repeat;
+  //background-position: 240px 29px;
 }
 
 .site-choice__link {
-  position: absolute;
+  //position: absolute;
   color: #ffffff;
   font-size: 19px;
-  line-height: 30px;
+  line-height: 24px;
   font-weight: bold;
   text-decoration: none;
-  display: inline-block;
-  width: 100%;
+  //display: inline-block;
+  //width: 100%;
   box-sizing: border-box;
   padding-top: 25px;
   padding-bottom: 28px;
   padding-left: 30px;
   padding-right: 130px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+
+  &:hover {
+    padding-top: 33px;
+    transform: translateY(-10px);
+  }
+}
+*/
+.site-choice__wrapper {
+  //background-color: #63d1bb;
+}
+.site-choice {
+  //width: 320px;
+  list-style-type: none;
+  padding: 0;
+  margin: 0 auto;
+  //margin-top: -5px;
+  background-color: #fafafa;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 0;
+}
+
+.site-choice__item {
+  //min-height: 105px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  box-sizing: border-box;
+  //position: relative;
+  transition: 0.4s;
+  align-items: center;
+  background-color: hsla(168, 54%, 60%, 1);
+
+  &:hover {
+    transform: translateY(-5px) scaleY(1.1);
+
+    .site-choice__link {
+      //transform: translateY(-5px)
+    }
+  }
+}
+
+.site-choice__toys {
+  background-color: hsla(171, 48%, 55%, 1);
+}
+
+.site-choice__text {
+  display: inline-block;
+  width: 120px;
+}
+
+.site-choice__link {
+  margin: 0 auto;
+  //position: absolute;
+  color: #ffffff;
+  font-size: 19px;
+  line-height: 24px;
+  font-weight: bold;
+  text-decoration: none;
+  //display: inline-block;
+  width: 320px;
+  box-sizing: border-box;
+  padding-top: 20px;
+  padding-bottom: 22px;
+  padding-left: 29px;
+  padding-right: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  //background-color: hsla(168, 54%, 60%, 1);
 
   &:hover {
     padding-top: 33px;
@@ -60,24 +140,81 @@
   }
 }
 
+/*.site-choice__svg {
+  position: absolute;
+  right: 35px;
+}
+
+.site-choice__svg--cube {
+  position: absolute;
+  right: 28px;
+}*/
 
 @media (min-width: 768px) {
+  .site-choice__wrapper {
+    //margin-top: 10px;
+    //padding: 0 50px;
+    background-color: #fafafa;
+    //box-sizing: border-box;
+  }
+
   .site-choice {
+    width: 768px;
     display: flex;
     flex-direction: row;
-    padding: 0 50px;
-    margin-top: 5px;
+    justify-content: center;
+    //padding: 0 50px;
+    //margin: 0 auto;
+    //margin-top: 8px;
   }
 
   .site-choice__item {
-    width: 335px;
+    width: 334px;
+  }
+
+  .site-choise__container {
+    padding-right: 34px;
+    padding-top: 20px;
+  }
+
+  .site-choice__interior {
+    //width: 540px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    //padding-bottom: 30px;
+  }
+
+  .site-choice__toys {
+    //width: 525px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    //padding-bottom: 30px;
+  }
+
+  .site-choice__link {
+    font-size: 20px;
+    line-height: 30px;
+    padding: 0;
+    padding-left: 35px;
+    padding-right: 35px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    flex-grow: 1;
   }
 }
 
 @media (min-width: 1250px) {
   .site-choice {
-    padding: 0 100px;
+    width: 1250px;
+    //padding: 0 100px;
     margin-top: -5px;
+    background-image: url(../../img/zigzag-fill-desktop.png);
+    display: flex;
+    justify-content: center;
   }
 
   .site-choice__item {
@@ -85,11 +222,25 @@
   }
 
   .site-choice__interior {
-    background-position: 450px 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 0;
+  }
+
+  .site-choise__container {
+    padding-right: 35px;
+    padding-top: 21px;
   }
 
   .site-choice__toys {
-    background-position: 430px 30px;
+    //width: 525px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 0;
   }
 
   .site-choice__link {
@@ -98,5 +249,22 @@
     font-size: 20px;
     line-height: 30px;
     letter-spacing: 0;
+  }
+
+  .site-choice__link--interior {
+    padding-right: 0;
+    padding-left: 37px;
+    padding-top: 8px;
+    padding-bottom: 0;
+    width: 250px;
+    //padding-top: 28px;
+  }
+  .site-choice__link--toys {
+    padding-right: 0;
+    padding-left: 37px;
+    padding-top: 8px;
+    padding-bottom: 0;
+    width: 220px;
+    //padding-top: 28px;
   }
 }
