--- a/source/sass/blocks/featured.scss
+++ b/source/sass/blocks/featured.scss
@@ -1,4 +1,4 @@
-.featured {
+/*.featured {
   margin-top: 25px;
   padding: 0 30px;
   padding-bottom: 40px;
@@ -136,15 +136,26 @@
 
 @media (min-width: 1250px) {
   .featured {
-    margin-top: 67px;
+    //margin-top: 67px;
+    width: 1250px;
+    margin-top: 0;
+    margin: 0 auto;
     padding: 0 100px;
+
     padding-bottom: 70px;
+    padding-top: 67px;
+    box-sizing: border-box;
+    background-image: url(../../img/triple-set-desktop.jpg);
+    background-position: 625px 0;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: middle;
   }
 
   .featured__title {
     position: relative;
     display: flex;
-    flex-direction: row;
     align-items: center;
     font-size: 53px;
     line-height: 57px;
@@ -193,4 +204,8 @@
     top: 18px;
     right: 100px;
   }
+}
+*/
+.featured {
+
 }
