--- a/source/sass/blocks/site-title.scss
+++ b/source/sass/blocks/site-title.scss
@@ -3,25 +3,31 @@
   padding: 0 30px;
   box-sizing: border-box;
   padding-top: 69px;
-  padding-bottom: 125px;
+  padding-bottom: 120px;
   text-align: center;
   font-size: 27px;
   line-height: 30px;
   width: 100%;
   background-color: #fafafa;
   background-image: url("../img/hero-mobile@1x.jpg");
-  background-position: -130px -20px;
+  background-position: center -20px;
   background-repeat: no-repeat;
 }
+
+.site-title__text {
+    display: inline-block;
+    width: 300px;
+  }
 
 @media (min-width: 768px) {
   .site-title {
     background-image: url("../img/hero-desktop.jpg");
-    background-position: center -61px;
+    background-position: center -77px;
     font-size: 43px;
     line-height: 51px;
-    padding-bottom: 365px;
-    padding-top: 90px;
+    padding-bottom: 373px;
+    padding-top: 75px;
+    padding-left: 30px;
   }
 
   .site-title__text {
@@ -32,10 +38,12 @@
 
 @media (min-width: 1250px) {
   .site-title {
-    background-position: center -64px;
+    background-position: center -80px;
     font-size: 53px;
     line-height: 57px;
-    padding-top: 90px;
+    padding-top: 75px;
+    padding-left: 40px;
+    padding-bottom: 365px;
     letter-spacing: 0;
 
     .site-title__text {
