--- a/source/sass/blocks/top-menu.scss
+++ b/source/sass/blocks/top-menu.scss
@@ -1,263 +1,310 @@
-@media(min-width: 320px) {
-  .header {
-    background-color: #f1f1f1;
-  }
-  .menu {
-    width: 320px;
-    margin: 0 auto;
-    position: relative;
-  }
-
-  .menu__toggle {
-    position: absolute;
-    right: 30px;
-    top: 30px;
-  }
-
-  .menu__list {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    //background-color: hsla(0, 33%, 38%, 0.9);
-    background-color: #ffffff;
-  }
-
-  .menu__link {
-    display: block;
-    padding: 26px 30px;
-    padding-left: 75px;
-    box-sizing: border-box;
-    position: relative;
-    text-decoration: none;
-    color: #000000;
-    font-size: 17px;
-    line-height: 25px;
-    font-weight: bold;
-    //background-color: #c1f1f1;
-  }
-  .menu__link--logo {
-    padding: 18px 30px;
-    border-bottom: 1px solid #e7e7e7;
-    padding-left: 110px;
-    padding-right: 70px;
-  }
-  .menu__item--knitting {
-    border-bottom: 1px solid #e7e7e7;
-  }
-
-  .menu__item--catalog {
-    border-bottom: 1px solid #e7e7e7;
-  }
-
-  .menu__link--find {
-    border-bottom: 1px solid #e7e7e7;
-  }
-
-  .menu__link--basket {
-    border-bottom: 1px solid #e7e7e7;
-  }
-
-  .menu__text-find {
-    display: block;
-  }
-  .menu__svg {
-    position: absolute;
-    left: 30px;
-  }
-  .menu__item--news {display: none;}
-  .menu__item--sale {display: none;}
-  .menu__item--delivery {display: none;}
+.header {
+  background-color: #f1f1f1;
 }
+.menu {
+  width: 320px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.menu__toggle {
+  position: absolute;
+  right: 30px;
+  top: 30px;
+}
+
+.menu__list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  //background-color: hsla(0, 33%, 38%, 0.9);
+  background-color: #ffffff;
+}
+
+.menu__link {
+  display: block;
+  padding: 26px 30px;
+  padding-left: 75px;
+  box-sizing: border-box;
+  position: relative;
+  text-decoration: none;
+  color: #000000;
+  font-size: 17px;
+  line-height: 25px;
+  font-weight: bold;
+  //background-color: #c1f1f1;
+
+  &:hover {
+    color: hsla(0, 0, 45%, 1);
+  }
+
+  &:active {
+    color: hsla(0, 0, 75%, 1);
+  }
+}
+.menu__link--logo {
+  padding: 18px 30px;
+  border-bottom: 1px solid #e7e7e7;
+  padding-left: 115px;
+  padding-top: 23px;
+  padding-right: 70px;
+}
+.menu__item--knitting {
+  border-bottom: 1px solid #e7e7e7;
+}
+
+.menu__item--catalog {
+  border-bottom: 1px solid #e7e7e7;
+}
+
+.menu__link--find {
+  border-bottom: 1px solid #e7e7e7;
+}
+
+.menu__link--basket {
+  border-bottom: 1px solid #e7e7e7;
+}
+
+.menu__text-find {
+  display: block;
+}
+.menu__svg {
+  position: absolute;
+  left: 30px;
+}
+.menu__item--news {
+  display: none;
+}
+.menu__item--sale {
+  display: none;
+}
+.menu__item--delivery {
+  display: none;
+}
+
 @media(min-width: 768px) {
-  .menu {
-    width: 768px;
-    margin: 0 auto;
-  }
-  .menu__list {
-    flex-direction: row;
-  }
+.menu {
+  width: 768px;
+  margin: 0 auto;
+}
 
-  .menu__link {
-    font-size: 15px;
-    line-height: 24px;
-    font-weight: bold;
-  }
+.menu__list {
+  flex-direction: row;
+}
 
-  .menu__item--active {}
-  .menu__item--logo {}
-  .menu__item--delivery {display: block;}
+/*.menu--closed .menu__item {
+  display: block;
+}*/
 
+.menu__item--catalog {
+  border: none;
+}
 
+.menu__item--knitting {
+  border: none;
+}
 
-  .menu__text-find {
-    display: none;
-  }
-  .menu__svg {
+.menu__link {
+  font-size: 15px;
+  line-height: 24px;
+  font-weight: bold;
+}
+
+.menu__item--delivery {
+  display: block;
+}
+
+.menu__text-find {
+  display: none;
+}
+
+.menu__svg {
   position: static;
-  }
-  .menu__svg--basket {
-    position: absolute;
-  }
-  .menu__link--logo {
-    padding: 18px 30px;
-    padding-right: 223px;
-    padding-top: 29px;
-    padding-left: 33px;
-    border-right: 1px solid #e7e7e7;
-    border-bottom: 1px solid #e7e7e7;
-    background-color: #ffffff;
-  }
-  .menu__link--find {
-    padding: 26.5px 30px;
-    padding-right: 34px;
-    padding-top: 37px;
-    border-right: 1px solid #e7e7e7;
-    border-bottom: 1px solid #e7e7e7;
-    background-color: #ffffff;
-  }
-  .menu__link--delivery {
-    padding: 26px 39px;
-    background-color: #f9f9f9;
-    font-size: 15px;
-    font-weight: 400;
-    padding-left: 104px;
-    padding-top: 17px;
-    padding-right: 77.5px;
-    padding-bottom: 35px;
-    border: none;
-  }
-  .menu__link--basket {
-    padding: 26.5px 30px;
-    padding-left: 84px;
-    padding-right: 77.5px;
-    padding-top: 31px;
-    padding-bottom: 33px;
-    border-bottom: 1px solid #e7e7e7;
-    background-color: #ffffff;
-    font-size: 17px;
-  }
+}
 
-  .menu__svg--basket {
-    left: 33px;
-    top: 34px;
-  }
-  .menu__item--logo {
-    order: -3;
-  }
-  .menu__link--catalog {
-    padding: 26.5px 30px;
-    padding-left: 21px;
-    padding-top: 16px;
-    padding-bottom: 36px;
-    padding-right: 15px;
-    background-color: #f9f9f9;
-  }
-  .menu__link--knitting {
-    padding-left: 22px;
-    padding-top: 17px;
-    padding-bottom: 35px;
-    background-color: #f9f9f9;
-  }
-  .menu__item--find {order: -2;}
-  .menu__item--basket {order: -1;}
+.menu__svg--basket {
+  position: absolute;
+}
+
+.menu__link--logo {
+  padding: 18px 30px;
+  padding-right: 223px;
+  padding-top: 29px;
+  padding-left: 61px;
+  border-right: 1px solid #e7e7e7;
+  border-bottom: 1px solid #e7e7e7;
+  background-color: #ffffff;
+}
+
+.menu__link--find {
+  padding: 26.5px 30px;
+  padding-right: 31px;
+  padding-top: 37px;
+  border-right: 1px solid #e7e7e7;
+  padding-left: 33px;
+  border-bottom: 1px solid #e7e7e7;
+  background-color: #ffffff;
+}
+
+.menu__link--delivery {
+  padding: 26px 39px;
+  background-color: #f9f9f9;
+  font-size: 15px;
+  font-weight: 400;
+  padding-left: 36px;
+  padding-top: 17px;
+  padding-right: 49.5px;
+  padding-bottom: 35px;
+  border: none;
+}
+
+.menu__link--basket {
+  padding: 26.5px 30px;
+  padding-left: 83px;
+  padding-right: 50.5px;
+  padding-top: 31px;
+  padding-bottom: 33px;
+  border-bottom: 1px solid #e7e7e7;
+  background-color: #ffffff;
+  font-size: 17px;
+}
+
+.menu__svg--basket {
+  left: 33px;
+  top: 34px;
+}
+
+.menu__item--logo {
+  order: -3;
+}
+
+.menu__link--catalog {
+  padding: 26.5px 30px;
+  padding-left: 49px;
+  padding-top: 16px;
+  padding-bottom: 36px;
+  padding-right: 15px;
+  background-color: #f9f9f9;
+}
+
+.menu__link--knitting {
+  padding-left: 22px;
+  padding-top: 17px;
+  padding-bottom: 35px;
+  padding-right: 98px;
+  background-color: #f9f9f9;
+}
+
+.menu__item--find {
+  order: -2;
+}
+
+.menu__item--basket {
+  order: -1;
+}
 }
 @media(min-width: 1250px) {
-  .menu {
-    width: 1250px;
-  }
-  .menu__item--catalog {
-    order: 0;
-  }
-  .menu__item--knitting {
-    order: 1;
-  }
-  .menu__item--logo {
-    order: 2;
-  }
-  .menu__item--find {
-    order: 3;
-  }
-  .menu__item--basket {
-    order: 4;
-  }
-  .menu__item--active {
+.menu {
+  width: 1250px;
+}
 
-  }
-  .menu__item--delivery {
-    order: 7;
-    display: block;
-  }
-  .menu__item--news {
-    display: block;
-    order: 5;
-  }
+.menu__item--catalog {
+  order: 0;
+}
 
-  .menu__item--sale {
-    display: block;
-    order: 6;
-  }
+.menu__item--knitting {
+  order: 1;
+}
 
-  .menu__link--catalog {
-    padding-left: 100px;
-    padding-top: 30px;
-    padding-right: 35px;
-    font-size: 17px;
-    line-height: 24px;
-    border-right: 1px solid #e7e7e7;
-    border-bottom: 1px solid #e7e7e7;
-    background-color: #ffffff;
-  }
+.menu__item--logo {
+  order: 2;
+}
 
-  .menu__link--knitting {
-    padding-left: 35px;
-    padding-top: 31px;
-    font-size: 17px;
-    line-height: 24px;
-    background-color: #ffffff;
-    border-bottom: 1px solid #e7e7e7;
-  }
+.menu__item--find {
+  order: 3;
+}
 
-  .menu__link--logo {
-    padding-left: 78px;
-    padding-right: 132px;
-    border-bottom: 1px solid #e7e7e7;
-    padding-top: 31px;
-  }
+.menu__item--basket {
+  order: 4;
+}
 
-  .menu__link--find {
-    padding-top: 39px;
-  }
+.menu__item--delivery {
+  order: 7;
+  display: block;
+}
 
-  .menu__link--basket {
-    padding-top: 31px;
-    padding-bottom: 35px;
-    padding-right: 101px;
-  }
+.menu__item--news {
+  display: block;
+  order: 5;
+}
 
-  .menu__link--news {
-    padding-left: 100px;
-    padding-top: 15px;
-    padding-bottom: 37px;
-    background-color: #f9f9f9;
-  }
+.menu__item--sale {
+  display: block;
+  order: 6;
+}
 
-  .menu__link--sale {
-    padding-left: 32px;
-    padding-top: 15px;
-    padding-bottom: 37px;
-    padding-right: 385px;
-    background-color: #f9f9f9;
-  }
+.menu__link--catalog {
+  padding-left: 100px;
+  padding-top: 30px;
+  padding-right: 35px;
+  font-size: 17px;
+  line-height: 24px;
+  border-right: 1px solid #e7e7e7;
+  border-bottom: 1px solid #e7e7e7;
+  background-color: #ffffff;
+}
 
-  .menu__link--delivery {
-    padding-left: 119px;
-    padding-top: 15px;
-    padding-bottom: 37px;
-    padding-right: 100px;
-    background-color: #f9f9f9;
-  }
+.menu__link--knitting {
+  padding-left: 35px;
+  padding-top: 31px;
+  padding-right: 30px;
+  font-size: 17px;
+  line-height: 24px;
+  background-color: #ffffff;
+  border-bottom: 1px solid #e7e7e7;
+}
+
+.menu__link--logo {
+  padding-left: 78px;
+  padding-right: 132px;
+  border-bottom: 1px solid #e7e7e7;
+  padding-top: 31px;
+}
+
+.menu__link--find {
+  padding-top: 39px;
+}
+
+.menu__link--basket {
+  padding-top: 31px;
+  padding-bottom: 35px;
+  padding-right: 101px;
+}
+
+.menu__link--news {
+  padding-left: 100px;
+  padding-top: 15px;
+  padding-bottom: 37px;
+  background-color: #f9f9f9;
+}
+
+.menu__link--sale {
+  padding-left: 32px;
+  padding-top: 15px;
+  padding-bottom: 37px;
+  padding-right: 385px;
+  background-color: #f9f9f9;
+}
+
+.menu__link--delivery {
+  padding-left: 119px;
+  padding-top: 15px;
+  padding-bottom: 37px;
+  padding-right: 100px;
+  background-color: #f9f9f9;
+}
 }
