--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -77,7 +77,7 @@
 }
 
 .about__table {
-  margin-top: 33px;
+  //margin-top: 33px;
   list-style-type: none;
   padding-left: 0;
 }
@@ -114,24 +114,88 @@
 
 @media (min-width: 768px) {
   .about {
-    background-image: url("../../img/review@1x.jpg");
+    /*background-image: url("../../img/review@1x.jpg");
     background-repeat: no-repeat;
     background-size: 350px 450px;
-    background-position: 0 640px;
+    background-position: 0 640px;*/
     padding: 0;
+    margin-top: 0;
+  }
+
+  .about__title-wrapper {
+    width: 768px;
+    margin: 0 auto;
+    padding: 0 50px;
+    padding-top: 78px;
+    padding-left: 48px;
+    box-sizing: border-box;
+  }
+
+  .about__title-wrapper--review {
+    padding: 0;
+    padding-top: 102px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .about__title {
+    font-size: 43px;
+    line-height: 50px;
+    letter-spacing: -0.3px;
+    display: inline-block;
+    margin-top: 0;
   }
 
   .about__link {
-    font-size: 20px;
+    /*font-size: 20px;
     line-height: 22px;
     font-weight: bold;
-    letter-spacing: -1px;
+    letter-spacing: 0;*/
+    padding: 0;
+    padding-top: 13px;
+    //padding-right: 50px;
+    padding-bottom: 58px;
+    margin-left: -3px;
   }
 
-  .about-comments {
-    position: relative;
-    min-height: 520px;
-    margin-top: 65px;
+  .about__text {
+    display: inline-block;
+    margin-top: 0;
+    width: 295px;
+    font-size: 20px;
+    line-height: 22px;
+    letter-spacing: 0;
+    font-weight: bold;
+  }
+
+  .about__text--eco {
+    width: 230px;
+  }
+
+  .about__text--scandinavian {
+    width: 260px;
+    padding-top: 9px;
+  }
+
+  .about__text--like {
+    width: 240px;
+    padding-top: 2px;
+  }
+
+  .about__text--handmade {
+    padding-left: 3px;
+  }
+
+  .about__text--local {
+    padding-top: 10px;
+    padding-left: 3px;
+  }
+
+  .about__text--present {
+    padding-top: 2px;
+    padding-left: 4px;
   }
 
   .about__list {
@@ -140,19 +204,43 @@
     box-sizing: border-box;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-top: 30px;
-    padding-left: 52px;
+    padding-top: 48px;
+    justify-content: center;
+    align-items: baseline;
+  }
+
+  .about-comments {
+    width: 768px;
+    padding: 0 50px;
+    padding-bottom: 40px;
+    margin: 0 auto;
+    box-sizing: border-box;
+    background-image: url("../../img/review@1x.jpg");
+    background-repeat: no-repeat;
+    background-size: 350px 457px;
+    background-position: 0 24px;
+  }
+
+  .about__title--review {
+    //padding-top: 102px;
+    margin-left: -3px;
   }
 
   .about__item {
-    width: 333px;
-    margin-top: 8px;
-    margin-bottom: 18px;
+    width: 330px;
+    //margin-top: 8px;
+    //margin-bottom: 18px;
   }
 
-  .about__text {
+  .about__svg {
+    margin-top: 0;
+  }
+
+  .about__comment {
+    margin: 0;
     font-size: 17px;
-    margin-top: 50px;
+    line-height: 30px;
+    padding-top: 46px;
   }
 
   .about__item--eco-order {
@@ -179,42 +267,82 @@
     order: 5;
   }
 
-  .about__title-wrapper {
-    width: 768px;
-    margin: 0 auto;
-    padding: 0 46px;
-    padding-top: 50px;
-  }
-
-  .about__title {
-    font-size: 43px;
-    line-height: 50px;
-    letter-spacing: -0.3px;
-    display: inline-block;
-    //margin-left: 50px;
-    margin: 0 auto;
-  }
-
   .about__td {
     border: none;
   }
 
-  .about__name {
-    display: inline-block;
-    margin-top: 55px;
+  .about__comment-wrapper {
+    margin-top: 54px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
 
-  .about__table {
-    float: right;
-    margin-top: 60px;
+  .about__name {
+    /*display: inline-block;
+    width: 300px;
+    margin: 0;
+    padding-top: 54px;
+    font-size: 17px;
+    font-weight: 800;
+    letter-spacing: 0.4px;*/
+    //margin-top: 54px;
+    margin: 0;
+    margin-left: -1px;
+  }
+
+  .about__span {
+    display: inline-block;
+    width: 300px;
+    margin: 0;
+    //padding-top: 54px;
+    font-size: 17px;
+    //font-weight: 800;
+    letter-spacing: 0.8px;
+    //letter-spacing: -0.2px;
+  }
+
+  .about__email {
+    display: inline-block;
+    letter-spacing: 0;
+    text-decoration: none;
+    color: #444444;
+  }
+
+  /*.about__table {
+    //float: right;
+    //margin-top: 60px;
+    //margin: 0;
+  }*/
+
+  .about__list--arrows {
+    padding: 0;
+    margin: 0;
+    justify-content: space-between;
+    width: 137px;
+    margin-right: 19px;
+    padding-top: 19px;
+  }
+
+  .about__item--prev {
+    //padding: 0;
+    //margin: 0;
+    width: 50px;
+  }
+
+  .about__item--next {
+    //padding: 0;
+    //margin: 0;
+    width: 50px;
   }
 
   .about__to-write {
-    margin-top: 50px;
+    margin-top: 0;
     width: 170px;
-    position: absolute;
-    top: 0;
-    right: 0;
+    margin-right: 100px;
+    //position: absolute;
+    //top: 0;
+    //right: 0;
   }
 
   .about__prev-button,
@@ -251,6 +379,6 @@
   }
 
   .about__table {
-    margin-top: 44px;
+    //margin-top: 44px;
   }
 }
