--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -13,7 +13,7 @@
   //justify-content: space-between;
 }
 
-.contacts__flag--display {
+/*.contacts__flag--display {
   display: none;
 }
 
@@ -59,7 +59,7 @@
 .contacts__email-link {
   color: inherit;
   font-size: 15px;
-}
+}*/
 
 .write-us {
   margin-top: 30px;
@@ -78,46 +78,101 @@
 
 @media (min-width: 768px) {
   .contacts {
-    padding: 0 55px;
+    width: 768px;
+    margin: 0 auto;
+    padding: 0 50px;
+    padding-top: 77px;
+    box-sizing: border-box;
   }
 
   .contacts__title {
     font-size: 43px;
-    line-height: 60px;
+    line-height: 50px;
     margin: 0;
-    margin-top: 40px;
+    margin-left: -3px;
+    letter-spacing: -0.3px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
   }
 
-  .contacts__flag--display {
-    display: block;
-  }
-
   .contacts__flag {
     width: 45px;
     height: 80px;
+    padding-right: 5px;
   }
 
-  .contacts__table--mt {
+  .contacts__list {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    font-size: 17px;
+    line-height: 30px;
+    color: #444444;
+  }
+
+  .contacts__item {
+    padding-top: 35px;
+  }
+
+  .contacts__item--email {
+    display: flex;
+    flex-direction: row;
+    //padding-bottom: 22px;
+    //padding-right: 20px;
+  }
+
+  .contacts__item--address {
+    display: flex;
+    flex-direction: row;
+    //padding-bottom: 22px;
+    padding-right: 34px;
+  }
+
+  .contacts__address {
+    margin: 0;
+    width: 220px;
+  }
+
+  .contacts__text {
+    margin: 0;
+    width: 80px;
+  }
+
+  .contacts__email {
+    text-decoration: none;
+    color: #444444;
+    letter-spacing: -0.2px;
+    margin-left: -2px;
+  }
+
+  /*.contacts__flag--display {
+    display: block;
+  }*/
+
+
+ /* .contacts__table--mt {
     margin-top: 33px;
   }
 
   .contacts__tbody {
     display: flex;
-  }
+  }*/
 
-  .contacts__address {
+  /*.contacts__address {
     width: 100px;
     font-size: 17px;
     line-height: 30px;
     font-weight: normal;
     letter-spacing: 0;
-  }
+  }*/
 
-  .contacts__address-wrapper {
+  /*.contacts__address-wrapper {
     display: flex;
     flex-direction: column;
     margin: 0;
@@ -130,7 +185,7 @@
     font-weight: normal;
     letter-spacing: 0;
     width: 230px;
-  }
+  }*/
 
   .write-us--size {
     width: 230px;
@@ -157,7 +212,7 @@
     align-items: center;
   }
 
-  .contacts__tbody {
+  /*.contacts__tbody {
     display: flex;
     flex-direction: column;
     width: 330px;
@@ -167,17 +222,17 @@
   .contacts__email-link {
     font-size: 17px;
     line-height: 30px;
-  }
+  }*/
 
-  .contacts__email,
+/*  .contacts__email,
   .contacts__address {
     width: 70px;
-  }
+  }*/
 
-  .contacts__email {
+  /*.contacts__email {
     font-size: 17px;
     font-weight: normal;
-  }
+  }*/
 
   .contacts__span {
     line-height: 40px;
