--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -18,8 +18,9 @@
   .map {
     width: 525px;
     height: 460px;
-    float: right;
-    margin-right: 100px;
-    margin-top: 75px;
+    //float: right;
+    //margin-right: 100px;
+    margin-top: 96px;
+    //margin: 0;
   }
 }
