--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -62,7 +62,7 @@
 }*/
 
 .write-us {
-  margin-top: 30px;
+  //margin-top: 30px;
   font-size: 17px;
   line-height: 20px;
   font-weight: bold;
@@ -187,29 +187,79 @@
     width: 230px;
   }*/
 
-  .write-us--size {
+  /*.write-us--size {
     width: 230px;
     margin: 0 auto;
-  }
+  }*/
 }
 
 @media (min-width: 1250px) {
   .contacts {
-    //padding: 0 100px;
-    width: 450px;
-    display: inline-block;
-    margin-top: 95px;
-    padding-left: 125px;
-    padding-right: 0;
+    margin: 0 auto;
+    padding: 0 100px;
+    width: 1250px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .contacts__container {
+    //margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: unset;
+    //padding-top: 154px;
+    width: 500px;
+    position: relative;
+  }
+
+  .contacts__list {
+    display: flex;
+    flex-direction: column;
+    margin-left: 155px;
+  }
+
+  .contacts__item {
+    padding-top: 31px;
   }
 
   .contacts__title {
+    //width: 750px;
+    //margin: 0 auto;
+    margin-top: 155px;
     font-size: 53px;
     line-height: 57px;
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
+  }
+
+  .contacts__title-text {
+    //padding-left: 3px;
+    display: inline-block;
+    //padding-left: 62px;
+    padding-bottom: 8px;
+    //padding-right: 56px;
+  }
+
+  .contacts__flag {
+    padding: 0;
+    padding-left: 3px;
+    padding-top: 3px;
+  }
+
+  .contacts__item--address {
+    padding-right: 0;
+  }
+
+  .contacts__text {
+    padding-left: 20px;
+  }
+
+  .contacts__item--email,
+  .contacts__item--address {
+
   }
 
   /*.contacts__tbody {
@@ -235,6 +285,6 @@
   }*/
 
   .contacts__span {
-    line-height: 40px;
+    //line-height: 40px;
   }
 }
