--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -58,7 +58,7 @@
     padding-bottom: 48px;
     box-sizing: border-box;
     margin: 0 auto;
-    margin-top: 56px;
+    margin-top: 157px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -115,6 +115,12 @@
 @media (min-width: 1250px) {
   .main-footer {
     //margin-top: 50px;
+  }
+
+  .main-footer__list {
+    width: 1250px;
+    margin: 0 auto;
+    margin-top: 100px;
   }
 
   .main-footer__item {
