--- a/source/sass/blocks/site-wrapper.scss
+++ b/source/sass/blocks/site-wrapper.scss
@@ -15,7 +15,12 @@
   }
 
   .site__write--wrapper {
-    margin-top: 46px;
+    //margin-top: 46px;
+    position: absolute;
+    bottom: -2579px;
+    //left: 386px;
+    width: 224px;
+    margin: 0 auto;
   }
 }
 
@@ -25,8 +30,8 @@
   }
 
   .site__write--wrapper {
-    margin-top: 115px;
-    width: 200px;
-    margin-left: 245px;
+    margin-top: 80px;
+    margin-left: 145px;
+    width: 226px;
   }
 }
