--- a/source/sass/blocks/top-menu.scss
+++ b/source/sass/blocks/top-menu.scss
@@ -89,7 +89,7 @@
   .menu {
     width: 768px;
     margin: 0 auto;
-    background-color: #fafafa;
+    //background-color: #fafafa;
   }
 
   .menu__list {
